welcome.lessons.welcome.array.basics.Array2.scala.error
Array2:18: error: too many arguments for method litMessage: ()String
    var mes= litMessage(0)
                       ^